--- a/Vincenzo_14_15.Rmd
+++ b/Vincenzo_14_15.Rmd
@@ -354,6 +354,8 @@ set.seed(42)
 algorithms <- list(
     "UBCF, z-score, cos" = list(name="UBCF", param=list(normalize = "Z-score",
                                                    method = 'cosine')),
+    "IBCF, z-score, cos" = list(name="IBCF", param=list(normalize = "Z-score",
+                                                   method = 'cosine')),
     "SVD, 2" = list(name='SVD', param=list(k=2))
 )
 
@@ -380,7 +382,6 @@ n = c(1, 3, 5, 10, 15, 20)
 results <- evaluate(scheme, algorithms, n=n, progress = FALSE)
 
 results_3 = avg_to_df(results)
-results_3
 ```
 
 
@@ -403,7 +404,6 @@ n = c(1, 3, 5, 10, 15, 20)
 results <- evaluate(scheme, algorithms, n=n, progress = FALSE)
 
 results_4 = avg_to_df(results)
-results_4
 ```
 ```{r}
 results_4_mean <- results_4 %>%
@@ -417,6 +417,131 @@ results_3_mean
 results_4_mean
 ```
 Man kann sehen, dass der Recall zunimmt und die Precision abnimmt mit einem höheren Threshold von Good Rating. Dies ist zu erwarten, da mit einem höheren Threshold die zufällige Chance auf einen TP abnimmt und die zufällige Chance auf einen FP zunimmt.
+
+## Given
+
+```{r}
+# GIVEN VALUE
+given = 2
+
+print(paste("Good Rating Value: ", good_rating))
+# Let's check some algorithms against each other
+scheme <- recommenderlab::evaluationScheme(coerce(MovieLense_user_movies_reduced_df,MovieLense) , method = "split", train = 0.8, k=3, 
+                          given = given, goodRating = 4)
+
+
+# run algorithms, predict next n movies
+n = c(1, 3, 5, 10, 15, 20)
+results <- evaluate(scheme, algorithms, n=n, progress = FALSE)
+
+# run algorithms, predict next n movies
+n = c(1, 3, 5, 10, 15, 20)
+results <- evaluate(scheme, algorithms, n=n, progress = FALSE)
+
+results_2 = avg_to_df(results)
+```
+```{r}
+# GIVEN VALUE
+given = 5
+
+print(paste("Good Rating Value: ", good_rating))
+# Let's check some algorithms against each other
+scheme <- recommenderlab::evaluationScheme(coerce(MovieLense_user_movies_reduced_df,MovieLense) , method = "split", train = 0.8, k=3, 
+                          given = given, goodRating = 4)
+
+
+# run algorithms, predict next n movies
+n = c(1, 3, 5, 10, 15, 20)
+results <- evaluate(scheme, algorithms, n=n, progress = FALSE)
+
+# run algorithms, predict next n movies
+n = c(1, 3, 5, 10, 15, 20)
+results <- evaluate(scheme, algorithms, n=n, progress = FALSE)
+
+results_5 = avg_to_df(results)
+```
+```{r}
+# GIVEN VALUE
+given = 7
+
+print(paste("Good Rating Value: ", good_rating))
+# Let's check some algorithms against each other
+scheme <- recommenderlab::evaluationScheme(coerce(MovieLense_user_movies_reduced_df,MovieLense) , method = "split", train = 0.8, k=3, 
+                          given = given, goodRating = 4)
+
+
+# run algorithms, predict next n movies
+n = c(1, 3, 5, 10, 15, 20)
+results <- evaluate(scheme, algorithms, n=n, progress = FALSE)
+
+# run algorithms, predict next n movies
+n = c(1, 3, 5, 10, 15, 20)
+results <- evaluate(scheme, algorithms, n=n, progress = FALSE)
+
+results_7 = avg_to_df(results)
+```
+```{r}
+# GIVEN VALUE
+given = 10
+
+print(paste("Good Rating Value: ", good_rating))
+# Let's check some algorithms against each other
+scheme <- recommenderlab::evaluationScheme(coerce(MovieLense_user_movies_reduced_df,MovieLense) , method = "split", train = 0.8, k=3, 
+                          given = given, goodRating = 4)
+
+
+# run algorithms, predict next n movies
+n = c(1, 3, 5, 10, 15, 20)
+results <- evaluate(scheme, algorithms, n=n, progress = FALSE)
+
+# run algorithms, predict next n movies
+n = c(1, 3, 5, 10, 15, 20)
+results <- evaluate(scheme, algorithms, n=n, progress = FALSE)
+
+results_10 = avg_to_df(results)
+```
+```{r}
+# GIVEN VALUE
+given = -1
+
+print(paste("Good Rating Value: ", good_rating))
+# Let's check some algorithms against each other
+scheme <- recommenderlab::evaluationScheme(coerce(MovieLense_user_movies_reduced_df,MovieLense) , method = "split", train = 0.8, k=3, 
+                          given = given, goodRating = 4)
+
+
+# run algorithms, predict next n movies
+n = c(1, 3, 5, 10, 15, 20)
+results <- evaluate(scheme, algorithms, n=n, progress = FALSE)
+
+# run algorithms, predict next n movies
+n = c(1, 3, 5, 10, 15, 20)
+results <- evaluate(scheme, algorithms, n=n, progress = FALSE)
+
+results_1 = avg_to_df(results)
+```
+
+```{r}
+results_2_mean <- results_2 %>%
+  group_by(model) %>%
+  summarize(Recall=mean(recall), Precision=mean(precision))
+results_5_mean <- results_5 %>%
+  group_by(model) %>%
+  summarize(Recall=mean(recall), Precision=mean(precision))
+results_10_mean <- results_10 %>%
+  group_by(model) %>%
+  summarize(Recall=mean(recall), Precision=mean(precision))
+results_1_mean <- results_1 %>%
+  group_by(model) %>%
+  summarize(Recall=mean(recall), Precision=mean(precision))
+
+results_2_mean
+results_5_mean
+results_10_mean
+results_1_mean
+```
+Wir können sehen, dass für alle der Recall zunimmt. Die Precision korreliert aber weder positiv, noch negativ mit dem Wert für "given.
+Das setting "all-but-1" führt zu einem viel schlechteren Resultat, was intuitiv Sinn ergibt, da es ja dann nur einen Film hat pro User als überprüfung. 
 
 ## Analyse Genreverteilung
 Von ein paar ausgewählten Modellen schauen wir uns die Genreverteilung an und vergleichen diese mit der echten Verteilung der Genre.
